# LowLevelProjects

./: README.md
asm-dictionary/: README.md  colon.inc  dict.asm  lib.asm  main.asm  makefile  test.py  words.inc
asm-io-library/: README.md  lib  lib.asm  lib.inc
elf64-loader/: .clang-tidy  CMakeLists.txt  README.md
elf64-loader/solution/include/: utils.h
elf64-loader/solution/src/: main.c  utils.c
image-rotation/: README.md
image-rotation/solution/src/: BMP_reader.c  BMP_reader.h  image.c  image.h  image_transformer.c  image_transformer.h  main.c  main.h
io-cache/: README.md
io-cache/source/: CMakeLists.txt
io-cache/source/loader/: ReadLoader.cpp  ReadLoaderWithouthCache.cpp
io-cache/source/monolith/app/: Main.cpp
io-cache/source/monolith/app/cache/: Cache.cpp
memory-allocator/: README.md
memory-allocator/src/: main.c  mem.c  mem_debug.c
shell-and-loder/: .gitignore  README.md
shell-and-loder/.devcontainer/: devcontainer.bash
shell-and-loder/source/: CMakeLists.txt
shell-and-loder/source/loaders/both/: main.cpp
shell-and-loder/source/loaders/read/: io-lat-read.cpp  io-lat-read.hpp  main.cpp
shell-and-loder/source/loaders/sort/: Sort.cpp  Sort.hpp  main.cpp
shell-and-loder/source/monolith/app/: Main.cpp
shell-and-loder/source/monolith/app/shell/: CommandInvoker.hpp  CommandIvoker.cpp  Shell.cpp  Shell.hpp
shell-and-loder/source/monolith/app/shell/commands/: CdCommand.cpp  CdCommand.hpp  Command.cpp  Command.hpp  ExitCommand.cpp  ExitCommand.hpp  LsCommand.cpp  LsCommand.hpp  RunCommand.cpp  RunCommand.hpp
